Fix dark mode button

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -175,6 +175,7 @@ body {
 
 .nav-links .theme-toggle:hover {
   border-radius: 12px;
+  cursor: pointer
 }
 
 .nav-links a.theme-toggle:hover {
